# pyats-genie-command-parse

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  temp_stuff.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_form.yml  config.yml
.github/workflows/: publish-to-pypi.yml  python-package.yml  test-coverage-lint.yml  utest-cov-lint-master-develop.yml
docs/: conf.py  index.rst
docs/doc-source/directions/: file-parse.rst  index.rst  string-parse.rst
docs/doc-source/pyats_genie_command_parse/: modules.rst  pyats_genie_command_parse.rst
pyats_genie_command_parse/: __init__.py  pyats_genie_command_parse.py  version.py
tests/: conftest.py  test_ios_parse.py  test_pyats_genie_command_parse_generic.py
tests/test_data/: __init__.py  ios_test_data.py  ios_test_data.txt
